objects/ProductCategoryProduct.object
<CustomObject>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <inlineHelpText>The actual ID for the cart will be the unique ID for all the carts. Note that while creating the cart, it generates a random string</inlineHelpText>
        <label>Cart Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer record shows who has created the cart.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Category Products</relationshipLabel>
        <relationshipName>Product_Category_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The product for the category.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Category Products</relationshipLabel>
        <relationshipName>Product_Category_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>The sequence for the category to be displayed</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The status of the cart. By default, all carts will be open and only one cart can be open for a customer at a time</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>